# stm32f7xx_cmake_template

./: .gitmodules  README.md  build.sh  flash.sh  test.sh
source/: CMakeLists.txt
source/cmake/: stm32f7_hal_driver.cmake
source/src_c_freertos/: main.c
source/src_c_hal/: main.c
source/src_cpp_freertos/: CMakeLists.txt  main.cpp
source/src_cpp_hal/: main.cpp
source/src_cpp_hal/inc/: stm32f7xx_hal_conf.h
source/src_freertos/: sysmem.c
